tests/valid/58235_while_in_var/while_in_var.agu
-- Author: 58235, António Almeida
                
let _ : Unit = 
    let i : Int = 5;
    let w : Unit = 
        while i > 0 do (
            set i = i - 1;
            print(i); print(" ")
        );