tests/invalid-syntax/58235_no_separator/no_separator.agu
-- Author: 58235, António Almeida
-- Missing separator ;

let _ : Unit = 
    let b : Int = 5;
    let c : Int = 7
    print(c)
    